
    For example, suppose we have a package containing two files,
    stow/dot-bashrc and stow/dot-emacs.d/init.el.  With this option,
    Stow will create symlinks from .bashrc to stow/dot-bashrc and from
    .emacs.d/init.el to stow/dot-emacs.d/init.el.  Any other files,
    whose name does not begin with "dot-", will be processed as usual.

    Thanks to Joris Vankerschaver for this feature!

*** chkstow now honours the $STOW_DIR environment variable

    The stow script already honoured the $STOW_DIR environment
    variable.  Now chkstow does too, for consistency.

*** Stow now has a non-zero exit code if option parsing failed

    Thanks to Brice Waegeneire for reporting this.

** Documentation fixes and enhancements

*** Fixed naming of man page

    The title of the generated man page was previously ending up as
    something like:

       IO::FILE=IO(0XA719C0)(1)

    Thanks to @Corin-EU on GitHub highlighting this and proposing a
    fix.

*** Convert README and INSTALL to Markdown

    They are now named README.md and INSTALL.md, and render nicely
    when viewed via git hosting services which support Markdown.

*** Update documentation to reflect more modern use cases

    The README.md, stow(8) man page, and info manual have been updated
    to de-emphasise the package management use, since these days almost
    everyone prefers to use modern package managers such as rpm / dpkg
    / Nix for (system-wide) package management.

    To compensate, more popular modern use cases for Stow have been
    added, such as management of dotfiles and software compiled in the
    user's $HOME directory.

*** Miscellaneous documentation fixes

    - Various typos were fixed.

    - The documentation for --verbose was updated to indicate that
      verbosity levels now go up to 5.

    - Erroneous glob examples in the --ignore documentation were fixed.

    - The abbreviation "regex" was removed from the info manual for
      consistency.
